@@ -184,6 +184,7 @@ sub clean_edition_number {
 	$ret_edition_number =~ s/\s*$re//ms;
 	$re = decode_utf8('V této');
 	$ret_edition_number =~ s/\s*$re//ms;
+	$ret_edition_number =~ s/\s*V\stomto\ssouboru//ms;
 	$re = decode_utf8('podobě');
 	$ret_edition_number =~ s/\s*$re//ms;
 
