@@ -1,4 +1,5 @@
 0.21
+ - Add edition number cleanup use case.
 
 0.20 2024-11-22T19:41:33+01:00
  - Add edition number cleanup use case.
